Fixed opening book setting

--- a/CoreChess/Assets/i18n/en-US.json
+++ b/CoreChess/Assets/i18n/en-US.json
@@ -64,6 +64,7 @@
   "ColorTheme": "Color theme",
   "Confirm": "Confirm",
   "ConfirmCastling": "Do you want to castle?",
+  "Custom": "Custom",
   "Draw": "Draw",
   "EnableAudio": "Enable audio",
   "EnableDragAndDrop": "Drag pieces",
@@ -92,6 +93,7 @@
   "General": "General",
   "HighlightColor": "Highlight color",
   "InitialPositionFen": "Initial position (FEN)",
+  "Internal": "Default (Perfect 2021)",
   "InvalidFenString": "The FEN string is invalid",
   "Language": "Language",
   "LoadGameError": "Error loading game",
