--- a/CoreChess/Assets/i18n/it-IT.json
+++ b/CoreChess/Assets/i18n/it-IT.json
@@ -64,6 +64,7 @@
   "ColorTheme": "Colori",
   "Confirm": "Conferma",
   "ConfirmCastling": "Vuoi arroccare?",
+  "Custom": "Custom",
   "Draw": "Patta",
   "EnableAudio": "Abilita audio",
   "EnableDragAndDrop": "Trascina pezzi",
@@ -92,6 +93,7 @@
   "General": "Generale",
   "HighlightColor": "Colore evidenziazione",
   "InitialPositionFen": "Posizione iniziale (FEN)",
+  "Internal": "Default (Perfect 2021)",
   "InvalidFenString": "Stringa FEN non valida",
   "Language": "Lingua",
   "LoadGameError": "Errore durante il caricamento della partita",
