Select engine in new game window refer #2

--- a/CoreChess/Assets/i18n/en-US.json
+++ b/CoreChess/Assets/i18n/en-US.json
@@ -66,6 +66,7 @@
   "ConfirmCastling": "Do you want to castle?",
   "Custom": "Custom",
   "Draw": "Draw",
+  "Elo": "Elo",
   "EnableAudio": "Enable audio",
   "EnableDragAndDrop": "Drag pieces",
   "Engine": "Engine",
@@ -107,7 +108,7 @@
   "MissingEngineCommand": "Missing engine command",
   "Moves": "Moves",
   "No": "No",
-  "NoActiveEngineError": "No engine selected, cannot start new game",
+  "NoEnginesError": "No engine configured, cannot start new game",
   "NoGameFoundInPgn": "No game found in PGN file",
   "None": "None",
   "OpeningBook": "Opening book",
