--- a/CoreChess/Assets/i18n/it-IT.json
+++ b/CoreChess/Assets/i18n/it-IT.json
@@ -66,6 +66,7 @@
   "ConfirmCastling": "Vuoi arroccare?",
   "Custom": "Custom",
   "Draw": "Patta",
+  "Elo": "Elo",
   "EnableAudio": "Abilita audio",
   "EnableDragAndDrop": "Trascina pezzi",
   "Engine": "Engine",
@@ -107,7 +108,7 @@
   "MissingEngineCommand": "Comando mancante",
   "Moves": "Mosse",
   "No": "No",
-  "NoActiveEngineError": "Nessun engine selezionato, impossibile iniziare una nuova partita",
+  "NoEnginesError": "Nessun engine configurato, impossibile iniziare una nuova partita",
   "NoGameFoundInPgn": "Nessuna partita trovata nel file PGN",
   "None": "Nessuno",
   "Ok": "Ok",
