Added check for updates menuitem

--- a/CoreChess/Assets/i18n/en-US.json
+++ b/CoreChess/Assets/i18n/en-US.json
@@ -3,6 +3,7 @@
   "_CapturedAll": "_All",
   "_CapturedDifference": "_Material advantage",
   "_CapturedPieces": "Captured pieces",
+  "_CheckForUpdates": "Check for updates",
   "_Chessboard": "_Chessboard",
   "_Coordinate": "Coordinate",
   "_CopyFENstringToClipboard": "Copy FEN string to clipboard",
