--- a/CoreChess/Assets/i18n/it-IT.json
+++ b/CoreChess/Assets/i18n/it-IT.json
@@ -3,6 +3,7 @@
   "_CapturedAll": "_Tutti",
   "_CapturedDifference": "_Vantaggio di materiale",
   "_CapturedPieces": "Pezzi catturati",
+  "_CheckForUpdates": "Controlla aggiornamenti",
   "_Chessboard": "_Scacchiera",
   "_Coordinate": "Coordinate",
   "_CopyFENstringToClipboard": "Copia stringa FEN",
