Undo move (WIP), ref #13

--- a/CoreChess/Assets/i18n/en-US.json
+++ b/CoreChess/Assets/i18n/en-US.json
@@ -29,6 +29,7 @@
   "_ShortAlgebraic": "Short algebraic",
   "_ShowEngineOutput": "Engine output",
   "_Tools": "_Tools",
+  "_UndoMove": "Undo move",
   "_View": "_View",
 
   "WT_AboutWindow": "About",
