--- a/CoreChess/Assets/i18n/it-IT.json
+++ b/CoreChess/Assets/i18n/it-IT.json
@@ -29,6 +29,7 @@
   "_ShortAlgebraic": "_Algebrica",
   "_ShowEngineOutput": "Messaggi dell'engine",
   "_Tools": "_Strumenti",
+  "_UndoMove": "Annulla mossa",
   "_View": "_Visualizza",
 
   "WT_AboutWindow": "About",
