File/rank notation outside (WIP), ref #6

--- a/CoreChess/Assets/i18n/en-US.json
+++ b/CoreChess/Assets/i18n/en-US.json
@@ -99,6 +99,7 @@
   "HighlightColor": "Highlight color",
   "Info": "Info",
   "InitialPositionFen": "Initial position (FEN)",
+  "Inside": "Inside",
   "Internal": "Default (Perfect 2021)",
   "InvalidFenString": "The FEN string is invalid",
   "Language": "Language",
@@ -120,6 +121,7 @@
   "None": "None",
   "OpeningBook": "Opening book",
   "Ok": "Ok",
+  "Outside": "Outside",
   "Pause": "Pause",
   "PauseMessage": "The engine will keep thinking",
   "Personality": "Personality",
