--- a/CoreChess/Assets/i18n/it-IT.json
+++ b/CoreChess/Assets/i18n/it-IT.json
@@ -101,6 +101,7 @@
   "InitialPositionFen": "Posizione iniziale (FEN)",
   "Internal": "Default (Perfect 2021)",
   "InvalidFenString": "Stringa FEN non valida",
+  "Inside": "Interno",
   "Language": "Lingua",
   "LoadGameError": "Errore durante il caricamento della partita",
   "LoadingGames": "Caricamento partite",
@@ -119,6 +120,7 @@
   "NoUpdateAvailable": "Stai eseguendo l'ultima versione disponibile",
   "None": "Nessuno",
   "Ok": "Ok",
+  "Outside": "Esterno",
   "OpeningBook": "Libro di aperture",
   "Pause": "Pausa",
   "PauseMessage": "L'engine continuerà a valutare la mossa",
