Dont's crash whn an error occurs while saving a game

--- a/CoreChess/Assets/i18n/en-US.json
+++ b/CoreChess/Assets/i18n/en-US.json
@@ -137,6 +137,7 @@
   "ResignGameConfirm": "Resign the current game?",
   "ResignationMessage": "Resignation, {0} wins!",
   "Resume": "Resume",
+  "SaveGameError": "Error saving game:\n{0}",
   "SaveGameOnExit": "Save game on exit",
   "ShowFileRankNotation": "Show file and rank notation",
   "ShowValidMoves": "Show valid moves",
