--- a/CoreChess/Assets/i18n/en-US.json
+++ b/CoreChess/Assets/i18n/en-US.json
@@ -19,6 +19,7 @@
   "_GamesDatabase": "Games database",
   "_Help": "_Help",
   "_LoadGame": "_Load game",
+  "_LoadRecentGame": "Load recent",
   "_LongAlgebraic": "Long algebraic",
   "_NewGame": "_New game",
   "_Notation": "Notation",
