--- a/CoreChess/Assets/i18n/it-IT.json
+++ b/CoreChess/Assets/i18n/it-IT.json
@@ -19,6 +19,7 @@
   "_GamesDatabase": "Storico partite",
   "_Help": "_Aiuto",
   "_LoadGame": "_Carica partita",
+  "_LoadRecentGame": "Carica recente",
   "_LongAlgebraic": "Algebrica lunga",
   "_NewGame": "_Nuova partita",
   "_Notation": "Notazione",
