--- a/CoreChess/Assets/i18n/en-US.json
+++ b/CoreChess/Assets/i18n/en-US.json
@@ -81,6 +81,7 @@
   "EngineExePath": "Command",
   "EngineMessages": "Engine output",
   "EngineName": "Name",
+  "EnginePlayer": "Engine",
   "EngineRegisterCode": "Register code",
   "EngineRegisterName": "Register name",
   "EngineSelect": "Select engine type",
@@ -98,6 +99,7 @@
   "GameType": "Game type",
   "General": "General",
   "HighlightColor": "Highlight color",
+  "HumanPlayer": "Human",
   "Info": "Info",
   "InitialPositionFen": "Initial position (FEN)",
   "Inside": "Inside",
@@ -131,6 +133,7 @@
   "PgnGameInfo": "{0} games: {1} white, {2} draw, {3} black, {4} other",
   "PiecesSet": "Pieces",
   "PlayerName": "Player name",
+  "PlayerType": "Type",
   "Rematch": "Rematch",
   "RemoveEngine": "Remove the engine '{0}'?",
   "RemoveGame": "Remove the selected game?",
