--- a/CoreChess/Assets/i18n/it-IT.json
+++ b/CoreChess/Assets/i18n/it-IT.json
@@ -81,6 +81,7 @@
   "EngineExePath": "Comando",
   "EngineMessages": "Messaggi dell'engine",
   "EngineName": "Nome",
+  "EnginePlayer": "Engine",
   "EngineRegisterCode": "Codice registrazione",
   "EngineRegisterName": "Nome registrazione",
   "EngineSelect": "Selezionare tipo engine",
@@ -98,6 +99,7 @@
   "GameType": "Tipologia",
   "General": "Generale",
   "HighlightColor": "Colore evidenziazione",
+  "HumanPlayer": "Umano",
   "Info": "Info",
   "InitialPositionFen": "Posizione iniziale (FEN)",
   "Internal": "Default (Perfect 2023)",
@@ -131,6 +133,7 @@
   "PgnGameInfo": "{0} partite: {1} bianco, {2} patte, {3} nero, {4} altro",
   "PiecesSet": "Pezzi",
   "PlayerName": "Nome giocatore",
+  "PlayerType": "Tipo",
   "Rematch": "Rivincita",
   "RemoveEngine": "Rimuovere l'engine '{0}'?",
   "RemoveGame": "Rimuovere la partita selezionata?",
