Renamed Settings.OpeningBook to DefaultOpeningBook

--- a/CoreChess/Assets/i18n/en-US.json
+++ b/CoreChess/Assets/i18n/en-US.json
@@ -69,6 +69,7 @@
   "Confirm": "Confirm",
   "ConfirmCastling": "Do you want to castle?",
   "Custom": "Custom",
+  "DefaultOpeningBook": "Default opening book",
   "DownloadingUpdate": "Dowloading update",
   "Draw": "Draw",
   "Elo": "Elo",
