--- a/CoreChess/Assets/i18n/it-IT.json
+++ b/CoreChess/Assets/i18n/it-IT.json
@@ -69,6 +69,7 @@
   "Confirm": "Conferma",
   "ConfirmCastling": "Vuoi arroccare?",
   "Custom": "Custom",
+  "DefaultOpeningBook": "Libro di aperture di default",
   "DownloadingUpdate": "Download in corso",
   "Draw": "Patta",
   "Elo": "Elo",
