--- a/CoreChess/Assets/i18n/en-US.json
+++ b/CoreChess/Assets/i18n/en-US.json
@@ -71,7 +71,7 @@
   "ConfirmCastling": "Do you want to castle?",
   "Custom": "Custom",
   "DefaultOpeningBook": "Default opening book",
-  "DownloadingUpdate": "Dowloading update",
+  "DownloadingUpdate": "Downloading update",
   "Draw": "Draw",
   "Elo": "Elo",
   "EnableAudio": "Enable audio",
