Add square attack indicators feature
- Add GetSquareAttackCount() and GetAttackingPieces() methods to Game class
- Add ShowSquareAttackIndicators and AttackColorMode settings
- Implement visual indicators showing attack counts per square:
  * Top-left: opponent attacks
  * Bottom-right: current player attacks
  * Top-right: difference (advantage/disadvantage)
- Add four color modes: None, Simple, Gradient, Advantage
- Add settings UI in Settings > Board tab
- Add English and Italian translations
- Indicators update dynamically as pieces move

--- a/CoreChess/Assets/i18n/en-US.json
+++ b/CoreChess/Assets/i18n/en-US.json
@@ -148,6 +148,12 @@
   "SaveGameOnExit": "Save game on exit",
   "ShowFileRankNotation": "Show file and rank notation",
   "ShowValidMoves": "Show valid moves",
+  "ShowAttackIndicators": "Show square attack indicators",
+  "AttackColorMode": "Attack color mode",
+  "AttackColorNone": "None",
+  "AttackColorSimple": "Simple highlight",
+  "AttackColorGradient": "Gradient by count",
+  "AttackColorAdvantage": "Colored by advantage",
   "Stalemate": "Stalemate",
   "StyleLight": "Light",
   "StyleDark": "Dark",
