--- a/CoreChess/Assets/i18n/it-IT.json
+++ b/CoreChess/Assets/i18n/it-IT.json
@@ -148,6 +148,12 @@
   "SaveGameOnExit": "Salva partita all'uscita",
   "ShowFileRankNotation": "Mostra nome righe e colonne",
   "ShowValidMoves": "Mostra mosse valide",
+  "ShowAttackIndicators": "Mostra indicatori di attacco delle case",
+  "AttackColorMode": "Modalità colore attacco",
+  "AttackColorNone": "Nessuno",
+  "AttackColorSimple": "Evidenziazione semplice",
+  "AttackColorGradient": "Gradiente per conteggio",
+  "AttackColorAdvantage": "Colorato per vantaggio",
   "Stalemate": "Stallo",
   "StyleLight": "Chiaro",
   "StyleDark": "Scuro",
